# witup-llm

./: .gitignore  404.html  LICENSE  Makefile  README.md  go.mod  go.sum  index.html  mkdocs.yml  pipeline.example.json  pom.xml  pyproject.toml  sitecustomize.py  sitemap.xml  witup.toml.example
.github/workflows/: ci.yml  release.yml
architecture/: index.html
architecture/domain-model/: index.html
architecture/service-layer/: index.html
architecture/witup-alignment/: index.html
cataloging/: index.html
cataloging/metrics/: index.html
cli/: index.html
cli/analysis/: index.html
cli/experiment/: index.html
cli/generation/: index.html
cli/utilities/: index.html
cmd/witup/: main.go  principal.go  principal_test.go
docs/: glossary.md  index.md
docs/architecture/: domain-model.md  index.md  service-layer.md  witup-alignment.md
docs/cataloging/: index.md  metrics.md
docs/cli/: analysis.md  experiment.md  index.md  (+2 more)
examples/: project-overview.txt
glossary/: index.html
overrides/: main.html
overview/: index.html
pipelines/: README.md  benchmark-matriz.json  piloto-commons-io.json  smoke-visualee.json
schemas/: pipeline.schema.json
scripts/: publish-witup-core-local.sh  run-example-witup-llm.sh  sync-witup-core-from-github.sh
search/: search_index.json
storage/: index.html
testing/: index.html
tests/: test_benchmark_domain.py  test_config.py  test_pipelines.py  test_project_catalog.py
witup_llm/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  llm.py  metrics.py  models.py  pipelines.py  project_catalog.py  prompts.py
(+170 files in other folders)
